--- a/src/app/components/organisms/modifier/modifier.component.html
+++ b/src/app/components/organisms/modifier/modifier.component.html
@@ -37,5 +37,5 @@
 }
 
 @if (modifier === 'Delete') {
-  <app-table [rows]="rows" [columns]="sort" [dataSource]="rows"></app-table>
+  <app-table [rows]="rows" [columns]="sort" [dataSource]="rows" />
 }
