--- a/src/app/components/atoms/tap/tap.component.scss
+++ b/src/app/components/atoms/tap/tap.component.scss
@@ -1,11 +1,13 @@
+@use 'variables.scss' as *;
+
 button[disabled] {
-  background-color: var(--color-common);
+  background-color: $color-common;
 }
 
 button {
   width: 100%;
   justify-content: start;
-  height: calc(var(--size-large) * 2);
+  height: calc($size-large * 2);
   &:hover {
     border-radius: 0;
   }
