--- a/src/app/components/atoms/manager/manager.component.html
+++ b/src/app/components/atoms/manager/manager.component.html
@@ -1,19 +1,9 @@
-<!-- @if (ss.manager.$fractal(); as fractal) {
+@if (ss.manager.$fractal(); as fractal) {
   <button mat-mini-fab appClick (onClick)="onClick(fractal)" (onHoldClick)="onHoldClick(fractal)">
     <mat-icon>{{ fractal.icon }}</mat-icon>
   </button>
 } @else {
-  <mat-spinner color="accent" diameter="40"></mat-spinner>
-} -->
-<!-- @if (ss.manager.$fractal(); as fractal) {
-  <button mat-mini-fab appClick (onClick)="onClick(fractal)" (onHoldClick)="onHoldClick(fractal)">
-    <mat-icon>{{ fractal.icon }}</mat-icon>
+  <button mat-mini-fab>
+    <mat-progress-spinner mode="indeterminate" diameter="42" strokeWidth="3" />
   </button>
-} @else {
-  <button mat-mini-fab><mat-icon>material-symbols-outlined</mat-icon></button>
-  <mat-spinner color="accent" diameter="50" />
-} -->
-
-<button class="button" mat-mini-fab>
-  <mat-progress-spinner class="progress-spinner" mode="indeterminate" diameter="42" />
-</button>
+}
