--- a/src/app/components/organisms/sidenav/sidenav.component.scss
+++ b/src/app/components/organisms/sidenav/sidenav.component.scss
@@ -1,5 +1,7 @@
+@use 'variables.scss' as *;
+
 .mat-drawer-container-app-sidenav {
-  padding: calc(var(--size-small) / 2);
+  padding: calc($size-small / 2);
   width: 100%;
   height: 100%;
 }
