--- a/src/app/components/organisms/page/page.component.html
+++ b/src/app/components/organisms/page/page.component.html
@@ -3,13 +3,12 @@
     <app-modifier
       [sort]="page.sort"
       [rows]="ss.row.$fractals()"
-      [shape]="page.shape"
       [modifier]="Modifiers"></app-modifier>
   } @else {
     <app-table
       [rows]="ss.row.$fractals()"
       [columns]="page.sort"
-      [dataSource]="page.list"
+      [dataSource]="page.fractals"
       (row)="onRowClick($event)"></app-table>
   }
 }
