--- a/src/app/components/atoms/header/header.component.html
+++ b/src/app/components/atoms/header/header.component.html
@@ -1,1 +1,1 @@
-<h1>{{ fs.page.$fractal()?.cursor }} {{ fs.modifier.$fractal()?.cursor }}</h1>
+<h1>{{ fs.page()?.data('Cursor') }} {{ fs.modifier()?.data('Cursor') }}</h1>
