--- a/src/app/components/organisms/sidenav/sidenav.component.html
+++ b/src/app/components/organisms/sidenav/sidenav.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="mat-drawer-container-app-sidenav" autosize>
   <mat-drawer
-    [opened]="isOpen$ | async"
+    [opened]="fs.managerEvent() === 'Click'"
     [disableClose]="false"
     class="mat-drawer-app-sidenav"
     mode="side"
