perform delete operation

--- a/src/app/components/atoms/tap/tap.component.html
+++ b/src/app/components/atoms/tap/tap.component.html
@@ -2,9 +2,9 @@
   mat-flat-button
   [disabled]="disabled"
   appClick
-  [disabledOnHold]="disabledOnHold(tap)"
+  [activateOnHold]="activateOnHold(tap)"
   (onHold)="onHold.emit(tap)"
   (onClick)="onClick.emit(tap)">
   <mat-icon>{{ tap.data('Icon') }}</mat-icon>
-  <ng-content select="[before-tap-name]"></ng-content> {{ tap.data('Cursor') }}
+  <ng-content select="[before-tap-name]"></ng-content> {{ tap.cursor }}
 </button>
