--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,66 +1,7 @@
 @use './variables.scss' as *;
+@use './scrollbar.scss';
 
 body {
   margin: 0;
   padding: 0;
-}
-
-/* Universal scrollable elements styling */
-* {
-  /* Scrollbar dimensions */
-  ::-webkit-scrollbar {
-    width: 8px; /* Vertical scrollbar width */
-    height: 8px; /* Horizontal scrollbar height */
-  }
-
-  /* Track (the background of the scrollbar) */
-  ::-webkit-scrollbar-track {
-    background: #e0e0e0; /* Neutral light-gray color */
-    border-radius: 10px; /* Ensure the track has rounded edges */
-    margin: 2px; /* Add padding around the track */
-  }
-
-  /* Thumb (the draggable part of the scrollbar) */
-  ::-webkit-scrollbar-thumb {
-    background-color: #b0b0b0; /* Neutral mid-gray color */
-    border-radius: 10px; /* Rounded edges for modern appearance */
-    border: 2px solid #e0e0e0; /* Matches track to create separation */
-  }
-
-  /* Thumb hover (when the mouse is over the scrollbar) */
-  ::-webkit-scrollbar-thumb:hover {
-    background-color: #909090; /* Slightly darker gray on hover */
-  }
-
-  /* Thumb active (when dragging the scrollbar) */
-  ::-webkit-scrollbar-thumb:active {
-    background-color: #707070; /* Even darker gray when active */
-  }
-
-  /* Firefox compatibility */
-  scrollbar-width: thin; /* Thin scrollbar width */
-  scrollbar-color: #b0b0b0 #e0e0e0; /* Thumb color and track color */
-}
-
-.app-toolbar-pages-global + .cdk-overlay-connected-position-bounding-box {
-  transform: translateX(-28px);
-}
-
-.app-toolbar-pages-global,
-.app-toolbar-settings-global,
-.app-toolbar-actions-global {
-  transform: translateY(-72px);
-}
-
-.mat-drawer-app-sidenav {
-  .mat-drawer-inner-container {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-}
-
-.mat-drawer-container-app-sidenav {
-  mat-drawer-content {
-    height: calc(-130px + 100vh);
-  }
 }
