--- a/src/app/components/atoms/input/input.component.html
+++ b/src/app/components/atoms/input/input.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="mat-form-field-app-input">
+<mat-form-field class="mat-form-field">
   <mat-label i18n>{{ label }}</mat-label>
   <input #inputElementRef [type]="label" matInput [formControl]="control" />
   @if (control.value && clearButton) {
