--- a/src/app/components/atoms/spinner/spinner.component.html
+++ b/src/app/components/atoms/spinner/spinner.component.html
@@ -1,1 +1,9 @@
-<mat-progress-spinner [mode]="mode" [value]="timeout$ | async" diameter="42" strokeWidth="3" />
+@if (mode === 'indeterminate') {
+  <mat-progress-spinner [mode]="mode" [diameter]="diameter" [strokeWidth]="strokeWidth" />
+} @else {
+  <mat-progress-spinner
+    [mode]="mode"
+    [value]="timeout$ | async"
+    [diameter]="diameter"
+    [strokeWidth]="strokeWidth" />
+}
