add load umlaad actions

--- a/src/app/components/atoms/table/table.component.html
+++ b/src/app/components/atoms/table/table.component.html
@@ -15,7 +15,9 @@
       mat-row
       *matRowDef="let fractal; columns: columns"
       appClick
-      [class.row-is-clicked]="rows.includes(fractal)"
-      (onClick)="this.row.emit(fractal)"></tr>
+      [activateOnHold]="true"
+      (onHold)="this.outHold.emit(fractal)"
+      (onClick)="this.outClick.emit(fractal)"
+      [class.row-is-clicked]="rows.includes(fractal)"></tr>
   </table>
 }
