--- a/src/app/components/atoms/tap/tap.component.html
+++ b/src/app/components/atoms/tap/tap.component.html
@@ -1,6 +1,6 @@
 <button
   mat-flat-button
-  [disabled]="disabled"
+  [disabled]="disabled()"
   appClick
   [activateOnHold]="activateOnHold(tap)"
   (onHold)="onHold.emit(tap)"
