--- a/src/app/components/organisms/page/page.component.html
+++ b/src/app/components/organisms/page/page.component.html
@@ -6,6 +6,7 @@
       [rows]="fs.rows.signal()"
       [columns]="page.split('Sort')"
       [dataSource]="page.list()"
-      (row)="onRowClick($event)" />
+      (outHold)="onRowHold()"
+      (outClick)="onRowClick($event)" />
   }
 }
