--- a/src/app/components/organisms/page/page.component.html
+++ b/src/app/components/organisms/page/page.component.html
@@ -1,6 +1,10 @@
 @if (fs.page.signal(); as page) {
-  @if (Modifier) {
-    <app-modifier [sort]="page.split('Sort')" [rows]="fs.rows.signal()" [modifier]="Modifier" />
+  @if (Modifier && fs.rows.formRecord(); as formRecord) {
+    <app-modifier
+      [sort]="page.split('Sort')"
+      [rows]="fs.rows.signal()"
+      [modifier]="Modifier"
+      [formRecord]="formRecord" />
   } @else {
     <app-table
       [rows]="fs.rows.signal()"
