--- a/src/app/components/atoms/header/header.component.html
+++ b/src/app/components/atoms/header/header.component.html
@@ -1,1 +1,1 @@
-<h1>{{ fs.page.signal()?.cursor }} {{ fs.modifier.signal() ? 'Modify' : '' }}</h1>
+<h1>{{ fs.page.signal()?.cursor }} {{ fs.modifier.signal()?.cursor }}</h1>
