--- a/src/app/components/organisms/modifier/modifier.component.html
+++ b/src/app/components/organisms/modifier/modifier.component.html
@@ -9,7 +9,7 @@
           <mat-card-title-group>
             <button type="button" mat-flat-button (click)="deleteRow(row)">Cancel</button>
             <mat-card-title> {{ $index + 1 }} {{ row.isClone ? 'new' : '' }}</mat-card-title>
-            @if (row.formGroup.dirty) {
+            @if (row.formGroup.dirty || fs.modifier.is('Delete')) {
               <mat-card-subtitle class="touched">Touched</mat-card-subtitle>
             } @else {
               <mat-card-subtitle class="untouched">Untouched</mat-card-subtitle>
