--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -8,6 +8,7 @@ $color-success: #28a745;
 $color-danger: #dc3545;
 $color-warning: #ffc107;
 $color-secondary: #f5f5f5;
+$color-manager: #ff4081;
 
 $toolbar-height: $size-large * 3;
 $toolbar-tap-width: 40px;
